<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity">

    <TextView
        android:text="@string/title_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="@dimen/abc_text_size_headline_material"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_media_streamer"
        android:text="@string/btn_lbl_media_streamer_app"
        android:layout_below="@+id/textView"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        style="@style/launcherButtonStyle"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_scores"
        android:text="@string/btn_lbl_scores_app"
        android:layout_below="@+id/button_media_streamer"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        style="@style/launcherButtonStyle"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_library"
        android:text="@string/btn_lbl_library_app"
        android:layout_below="@+id/button_scores"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        style="@style/launcherButtonStyle"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_lbl_bigger_app"
        android:id="@+id/button_bigger"
        android:layout_below="@+id/button_library"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        style="@style/launcherButtonStyle"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_lbl_beacon_app"
        android:id="@+id/button_beacon_reader"
        android:layout_below="@+id/button_bigger"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        style="@style/launcherButtonStyle"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_lbl_capstone_app"
        android:id="@+id/button_capstone"
        android:layout_below="@+id/button_beacon_reader"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        style="@style/capstoneButtonStyle"/>


</RelativeLayout>
